# python-verification-env

./: README.md
convert-file-by-libree/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  start.sh
convert-file-by-libree/input/: sample.doc  sample.docx  sample.odp  sample.ods  sample.odt  sample.ppt  sample.pptx  sample.xls  sample.xlsx
