[tool.poetry]
name = "excel-operation"
version = "0.1.0"
description = "Excelの検証用"
authors = ["HIR0-728 <70585820+HIR0-728@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xlsx2html = "^0.6.1"
weasyprint = "^62.1"
reportlab = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.10.1"
flake8 = "6.0.0"
debugpy = "^1.6.7.post1"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
